@@ -1,3 +1,7 @@
+1998-06-24  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* gnomine.c (setup_game): Use new API for GtkSpinButton.
+
 1998-05-29 Kjartan Maraas <kmaraas@fib.hl.no>
 
 	* gnomine.c: Fixed scores getting better as time goes.
